--- a/svelte-ai-generative-fill/src/lib/styles.css
+++ b/svelte-ai-generative-fill/src/lib/styles.css
@@ -43,7 +43,34 @@ p {
   width: 100%;
 }
 
+.image-wrapper {
+  position: relative;
+}
+
 .image-container img.vertical {
   height: 400px;
   width: auto;
+}
+
+.image-wrapper.loading-indicator::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #ffffff;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  animation: spin 500ms linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
